--- a/src/css/main.css
+++ b/src/css/main.css
@@ -74,7 +74,7 @@ body {
     box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
     padding-bottom: 10px;
     margin-bottom: 50px;
-    background-color: #fff;
+    background-color: var(--color-1);
     border-radius: 0 0 22px 22px;
 }
 
